--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -7052,7 +7052,7 @@ html {
   margin: 0 auto;
   min-height: 200px;
   max-width: 529px;
-  background: url("../../images/paper.png");
+  background: url("../images/paper.png");
   -webkit-box-align: center;
   -webkit-align-items: center;
      -moz-box-align: center;
@@ -7219,7 +7219,7 @@ html {
   margin: 0 auto;
   min-height: 200px;
   max-width: 529px;
-  background: url("../../images/paper.png");
+  background: url("../images/paper.png");
   width: 100%;
   display: flex;
   margin-top: 2px;
@@ -7275,7 +7275,7 @@ html {
   margin: 0 auto;
   min-height: 200px;
   max-width: 529px;
-  background: url("../../images/paper.png");
+  background: url("../images/paper.png");
   position: relative;
   display: flex; }
   .paper-card-info__avatar {
@@ -7311,7 +7311,7 @@ html {
   margin: 0 auto;
   min-height: 200px;
   max-width: 529px;
-  background: url("../../images/paper.png");
+  background: url("../images/paper.png");
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -7371,7 +7371,7 @@ html {
   margin: 0 auto;
   min-height: 200px;
   max-width: 529px;
-  background: url("../../images/paper.png");
+  background: url("../images/paper.png");
   display: flex; }
   @media screen and (max-width: 640px) {
     .paper-card-js-level {
@@ -7513,7 +7513,7 @@ html {
   margin: 0 auto;
   min-height: 200px;
   max-width: 529px;
-  background: url("../../images/paper.png");
+  background: url("../images/paper.png");
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
