--- a/neeo-play/main.css
+++ b/neeo-play/main.css
@@ -2,8 +2,9 @@ html, body {
 	margin: 0;
 	padding: 0;
 	/*background-color: #66BBFC;*/
-	background-color: #000000;
 	height: 100%;
+	width: 100vw;
+	overflow: hidden;
 }
 
 .hidden {
@@ -11,6 +12,15 @@ html, body {
 	height: 0;
 	width: 0;
 	overflow: hidden;
+}
+
+.main-wrap {
+	background-color: #000000;
+	height: 100%;
+}
+
+.main-wrap_animation-zoom-portal {
+	background-color: white;
 }
 
 /* ========================================= links ========================================= */
@@ -59,7 +69,7 @@ html, body {
 	height: 16vw;
 }
 
-/* ========================================= layers ========================================= */
+/* ========================================= main block ========================================= */
 
 .main-block {
 	width: 100%;
@@ -70,6 +80,7 @@ html, body {
 	overflow: hidden;
 	display: flex;
 	align-items: flex-end;
+	transition: transform 300ms linear, opacity 300ms linear;
 }
 
 .main-block__wrap-video {
@@ -96,6 +107,16 @@ html, body {
 	top: 0;
 	/*bottom: -10.1vw;*/
 	bottom: 0;
+}
+
+.main-block_animation_portal1 {
+	transform: scale(6) translateX(530px) translateY(-155px);
+	opacity: 0;
+}
+
+.main-block_animation_portal2 {
+	transform: scale(6) translateX(182px) translateY(-155px);
+	opacity: 0;
 }
 
 /* ========================================= neeo ========================================= */
