--- a/neeo-play/main.css
+++ b/neeo-play/main.css
@@ -17,6 +17,7 @@ html, body {
 .main-wrap {
 	background-color: #000000;
 	height: 100%;
+	transition: background-color 300ms linear;
 }
 
 .main-wrap_animation-zoom-portal {
