--- a/neeo-play/main.css
+++ b/neeo-play/main.css
@@ -30,7 +30,7 @@ html, body {
 	position: absolute;
 	height: 200px;
 	width: 100px;
-	cursor: pointer;
+	cursor: url('./assets/cursor-pointer.png'), url('./assets/cursor.cur'), pointer;
 	display: block;
 	outline: none;
 	z-index: 100;
@@ -82,6 +82,7 @@ html, body {
 	display: flex;
 	align-items: flex-end;
 	transition: transform 300ms linear, opacity 300ms linear;
+	cursor: url('./assets/cursor.png'), url('./assets/cursor.cur'), auto;
 }
 
 .main-block__wrap-video {
@@ -89,11 +90,6 @@ html, body {
 	height: 36.2vw;
 	position: relative;
 	width: 100%;
-}
-
-.main-block__background-gif {
-	width: 100%;
-	height: auto;
 }
 
 .main-block__video {
@@ -162,6 +158,7 @@ html, body {
 /* ========================================= loading block ========================================= */
 
 .loading-block {
+	cursor: url('./assets/cursor.png'), url('./assets/cursor.cur'), auto;
 	position: fixed;
 	/*background-color: black;*/
 	background-color: #50C0EA;
