--- a/neeo-play/main.css
+++ b/neeo-play/main.css
@@ -17,6 +17,8 @@ html, body {
 .main-wrap {
 	background-color: #000000;
 	height: 100%;
+	-webkit-transition: background-color 300ms linear;
+	-o-transition: background-color 300ms linear;
 	transition: background-color 300ms linear;
 }
 
@@ -45,13 +47,18 @@ html, body {
 	left: 50%;
 	width: 10vw;
 	height: 10vw;
+	-webkit-transition: all 500ms ease-out;
+	-o-transition: all 500ms ease-out;
 	transition: all 500ms ease-out;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 	border-radius: 50%;
 }
 
 .main-block__link:hover.main-block__link:before {
 	opacity: 0.33;
+	-webkit-box-shadow: 0 0 25px 25px #aedaff;
 	box-shadow: 0 0 25px 25px #aedaff;
 	background-color: #aedaff;
 }
@@ -76,12 +83,22 @@ html, body {
 	width: 100%;
 	height: 36.2vw;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	position: relative;
 	overflow: hidden;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: end;
+	-ms-flex-align: end;
 	align-items: flex-end;
+	-webkit-transition: opacity 300ms linear, -webkit-transform 300ms linear;
+	transition: opacity 300ms linear, -webkit-transform 300ms linear;
+	-o-transition: transform 300ms linear, opacity 300ms linear;
 	transition: transform 300ms linear, opacity 300ms linear;
+	transition: transform 300ms linear, opacity 300ms linear, -webkit-transform 300ms linear;
 	cursor: url('./assets/cursor.png'), url('./assets/cursor.cur'), auto;
 }
 
@@ -112,11 +129,15 @@ html, body {
 }
 
 .main-block_animation_portal1 {
+	-webkit-transform: scale(6) translateX(34%) translateY(-27%);
+	-ms-transform: scale(6) translateX(34%) translateY(-27%);
 	transform: scale(6) translateX(34%) translateY(-27%);
 	opacity: 0;
 }
 
 .main-block_animation_portal2 {
+	-webkit-transform: scale(6) translateX(12%) translateY(-27%);
+	-ms-transform: scale(6) translateX(12%) translateY(-27%);
 	transform: scale(6) translateX(12%) translateY(-27%);
 	opacity: 0;
 }
@@ -142,8 +163,19 @@ html, body {
 /*}*/
 
 .main-block__neeo_anim_Disappear1 {
+	-webkit-animation: neeoDisappear1 2200ms linear;
 	animation: neeoDisappear1 2200ms linear;
+	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes neeoDisappear1 {
+	0% {
+		left: 0;
+	}
+	100% {
+		left: -23vw;
+	}
 }
 
 @keyframes neeoDisappear1 {
@@ -164,10 +196,14 @@ html, body {
 	background-color: #50C0EA;
 	height: 36.2vw;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	left: 0;
 	right: 0;
 	z-index: 1000;
+	-webkit-transition: 1000ms ease-out opacity;
+	-o-transition: 1000ms ease-out opacity;
 	transition: 1000ms ease-out opacity;
 }
 
@@ -180,31 +216,55 @@ html, body {
 	position: absolute;
 	left: 50%;
 	top: 50%;
+	-webkit-transform-origin: center;
+	-ms-transform-origin: center;
 	transform-origin: center;
+	-webkit-transform: translateY(-50%) translateX(-50%);
+	-ms-transform: translateY(-50%) translateX(-50%);
 	transform: translateY(-50%) translateX(-50%);
 	width: 10vw;
+	-webkit-animation: loader 2000ms infinite linear;
 	animation: loader 2000ms infinite linear;
 }
 
 .loading-block__loader:nth-child(2) {
 	width: 13vw;
 	opacity: 0.5;
+	-webkit-transform: translateY(-50%) translateX(-50%);
+	-ms-transform: translateY(-50%) translateX(-50%);
 	transform: translateY(-50%) translateX(-50%);
+	-webkit-animation: loader 4000ms infinite linear;
 	animation: loader 4000ms infinite linear;
 }
 
 .loading-block__loader:nth-child(3) {
 	width: 16vw;
 	opacity: 0.25;
+	-webkit-transform: translateY(-50%) translateX(-50%);
+	-ms-transform: translateY(-50%) translateX(-50%);
 	transform: translateY(-50%) translateX(-50%);
+	-webkit-animation: loader 8000ms infinite linear;
 	animation: loader 8000ms infinite linear;
+}
+
+@-webkit-keyframes loader {
+	0% {
+		-webkit-transform: translateY(-50%) translateX(-50%) rotate(0);
+		transform: translateY(-50%) translateX(-50%) rotate(0);
+	}
+	100% {
+		-webkit-transform: translateY(-50%) translateX(-50%) rotate(360deg);
+		transform: translateY(-50%) translateX(-50%) rotate(360deg);
+	}
 }
 
 @keyframes loader {
 	0% {
+		-webkit-transform: translateY(-50%) translateX(-50%) rotate(0);
 		transform: translateY(-50%) translateX(-50%) rotate(0);
 	}
 	100% {
+		-webkit-transform: translateY(-50%) translateX(-50%) rotate(360deg);
 		transform: translateY(-50%) translateX(-50%) rotate(360deg);
 	}
 }
@@ -215,5 +275,7 @@ html, body {
 	bottom: 20px;
 	color: white;
 	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	transform: translateX(-50%);
 }
